--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple TypeScript page</title>
-    <script src="dist/app.js" defer></script>
-    <script src="dist/buttonAction.js" defer></script>
+    <script type="module" src="./dist/index.js" defer></script>
   </head>
-  <body>
-    <button>Add!</button>
+  <body>   
+    <input id="inputField" type="text" title="Please enter a value" placeholder="Type something here" />
+    <button>Concat!</button>
   </body>
 </html>
